--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffee-script": "1.1.3"
     ,"express": "2.5.0"
     ,"jade": "0.17.0"
+    ,"ejs": "0.5.0"
     ,"stylus": "0.19.2"
   },
   "devDependencies": {}
